# cis194

homework1/: homework1.cabal
homework1/app/: Main.hs
homework2/: homework2.cabal
homework2/app/: Main.hs
homework3/: CHANGELOG.md  homework3.cabal
homework3/app/: Golf.hs
homework4/: CHANGELOG.md  homework4.cabal
homework4/app/: Main.hs
