cabal-version:   3.0
name:            homework4
version:         0.1.0.0
maintainer:      pkerty.dev@gmail.com
author:          Kerty
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable homework4
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:    base ^>=4.21.0.0
